added and integrate classes MM_SpellSlots MM_AbilityScore

--- a/Cantrip/Base.lproj/Main.storyboard
+++ b/Cantrip/Base.lproj/Main.storyboard
@@ -446,6 +446,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="aEb-PE-xmN"/>
+        <segue reference="CN1-oJ-giG"/>
     </inferredMetricsTieBreakers>
 </document>
